.kubernetes/ingress/demo-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: observability-demo-ingress-api
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: letsencrypt-staging
    cert-manager.io/issue-temporary-certificate: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/x-forwarded-prefix: "/api"
    nginx.ingress.kubernetes.io/proxy-body-size: 30m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
spec:
  ingressClassName: nginx
  rules:
    - host: #{DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: demo-api-service
                port:
                  number: 8080
            path: /api(/|$)(.*)
            pathType: Prefix
  tls:
    - hosts:
        - #{DOMAIN}
      secretName: observability-demo-api#{CONFIGURATION}-tls
